<resources>
    <string name="app_name">Homework01</string>
    <string name="button_text">Exit</string>
    <string name="hint_bill">Enter Bill Value</string>
    <string name="tippercent">Tip %:</string>
    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    <string name="billtotal">Bill Total:</string>
    <string name="custom">Costom:</string>
    <string name="Radio10">10%</string>
    <string name="Radio15">15%</string>
    <string name="Radio18">18%</string>
    <string name="buttoncustom">Custom</string>
    <string name="percentage">20%</string>
    <string name="exit">Exit</string>
</resources>